update optimasi DB dan Redis
