# routes/api.php
@@ -29,6 +29,7 @@ Route::prefix('drivers')->group(function () {
 });
 
 // Order Routes (Modul 2)
+Route::get('/orders', [OrderController::class, 'index']);
 Route::post('/orders', [OrderController::class, 'store']);
 Route::get('/orders/{id}', [OrderController::class, 'show']);
 Route::patch('/orders/{id}/status', [OrderController::class, 'updateStatus']);
